# csc591_lab3

./: .gitignore  README.md  pyproject.toml
assets/tokenizers/: english_bytebpe_8k.json
configs/: small.yaml  small_model_tinyshakespeare_char.yaml  small_plus.yaml  tiny.yaml
configs/optional/: README.md  experiment_configs.yaml  sft_dolly_bytebpe.yaml  sft_dolly_char.yaml  sft_tinyshakespeare_char.yaml
configs/reference/: README.md  small_model.yaml  small_model_tinyshakespeare.yaml  small_model_tinyshakespeare_bytebpe.yaml  tiny_model_tinyshakespeare_bytebpe.yaml
docs/: EVALUATION_RUBRIC.md  IMPLEMENTATION_CHECKLIST.md  LAB_CONCEPTS.md  LAB_GUIDE.md  LAB_QUESTIONS.md  PLATFORM_AND_RUNTIME_NOTES.md  WHAT_TO_SUBMIT.md
report/: answers.md  main.md
scripts/: download_english_dataset.py  download_sample_dataset.py  download_sft_dataset.py  generate_text.py  prepare_packed_dataset.py  quantization_bonus.py  test_tokenizer.py  train_model.py  train_sft.py  train_tokenizer.py  validate_submission_inference.py
src/: __init__.py
src/components/: __init__.py  activation.py  attention.py  feedforward.py  normalization.py  positional.py  transformer.py
src/data/: __init__.py  dataloader.py  dataset.py  packed_dataset.py  sft_dataset.py
src/generation/: __init__.py  generator.py
src/model/: __init__.py  config.py  language_model.py
src/tokenizer/: __init__.py  base.py  bpe.py  byte_bpe.py  loading.py
src/training/: __init__.py  loss.py  scheduler.py  trainer.py
submission/: .README.md.swp  README.md  standalone_inference_template.py
tests/: test_attention.py  test_generation_module.py  test_model.py  test_part2_integration.py  test_tokenizer_part2.py  test_training_modules.py
